# kitsu_ingest

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  build_docker.sh  core.py  kitsu_ingest.py  pyproject.toml  requirements.txt
kitsu/: __init__.py  publisher.py
kitsu_ingest/: __main__.py  core.py
kitsu_ingest/kitsu/: __init__.py  auth.py
kitsu_ingest/processors/: video_processor.py
kitsu_ingest/utils/: validation.py
processed/: .~lock.00_BAB_GUERLAIN_ORCHIDEE_IMPERIALE_NEW_25.0iHANDLES_250116_17h40_Breakdown_kitsu_20250429_180352.csv#  00_BAB_GUERLAIN_ORCHIDEE_IMPERIALE_NEW_25.0iHANDLES_250116_17h40_Breakdown_kitsu_20250429_180352.csv
processors/: csv_processor.py
scripts/: process_and_push.sh  process_csv.sh  process_csv_and_video.sh  push_only.sh
utils/: validation.py
